feat: Implement screen wake lock and update manifest
Adds screen wake lock functionality to prevent the device from sleeping during a CPX timer session. Updates the application manifest to use a remote icon URL, simplifying asset management.

--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,7 @@
   "theme_color": "#2563EB",
   "icons": [
     {
-      "src": "logo.png",
+      "src": "https://cdn-icons-png.flaticon.com/512/2830/2830312.png",
       "sizes": "512x512",
       "type": "image/png"
     }
