feat: Update tsconfig for better build configuration
Adjusted `include` and `exclude` patterns to ensure all relevant TypeScript and TSX files are compiled and to prevent unnecessary compilation of `node_modules` and `dist` directories.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,6 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["."],
-  "references": [{ "path": "./tsconfig.node.json" }]
+  "include": ["**/*.ts", "**/*.tsx"],
+  "exclude": ["node_modules", "dist"]
 }
